env ayarları ekleni.
