# src/routers/index.ts
@@ -1,11 +1,11 @@
 import express from "express";
-import PingController from "../controllers/ping";
+import { UsersController } from "../controllers/user";
 
 const router = express.Router();
 
-router.get("/ping", async (_req, res) => {
-  const controller = new PingController();
-  const response = await controller.getMessage();
+router.get("/users", async (_req, res) => {
+  const controller = new UsersController();
+  const response = await controller.getAllUsers();
   return res.send(response);
 });
 
